--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,41 @@
 @import "tailwindcss";
+
+@layer base {
+  h1 {
+    @apply text-2xl;
+  }
+  h2 {
+    @apply text-xl;
+  }
+  h3 {
+    @apply text-lg;
+  }
+
+  input[type="text"] {
+    @apply px-3 rounded-md focus:outline-none outline-none;
+  }
+
+  .btn {
+    @apply cursor-pointer px-3 py-1 rounded-md;
+  }
+
+  .btn-primary {
+    @apply bg-blue-200 text-blue-700 hover:bg-blue-100;
+  }
+
+  .btn-primary-2 {
+    @apply text-blue-200 bg-blue-700 hover:bg-blue-500;
+  }
+
+  .btn-secondary {
+    @apply bg-gray-300 text-gray-700 hover:bg-gray-200;
+  }
+
+  .note {
+    @apply font-light text-gray-600;
+  }
+
+  .statistic {
+    @apply bg-white m-1 rounded-xl p-2 shadow;
+  }
+}
